--- a/index.html
+++ b/index.html
@@ -548,10 +548,11 @@
                         <div class="speaking-topics">
                             <h4>Topics Include:</h4>
                             <ul>
-                                <li>The Future of Private AI & Personal Data Ownership</li>
-                                <li>Women in Technology Leadership</li>
-                                <li>From Invention to Innovation: A 24-Patent Journey</li>
-                                <li>Building Companies That Change Industries</li>
+                                <li>The Future of Private AI</li>
+                                <li>The Future Personal Data Ownership</li>
+                                <li>Preserving Human Identityp</li>
+                                <li>What is AI and Why Should I Care?</li>
+                                <li>Women in Technology and STEM</li>
                                 <li>The Evolution of Wireless Technology</li>
                                 <li>Technology Equity & Serving Underserved Communities</li>
                             </ul>
@@ -576,7 +577,7 @@
                         <p>Building next-generation AI software with built-in privacy and user data ownership.</p>
                     </div>
                     <div class="role-card">
-                        <h3>Chairman of the Board</h3>
+                        <h3>Board of Directors</h3>
                         <p class="org">MTI (Mobile Tech Inc.)</p>
                         <p>Leading provider of security and display hardware, IoT software, and global services in retail, healthcare, and hospitality.</p>
                     </div>
@@ -584,6 +585,11 @@
                         <h3>Strategic Advisor</h3>
                         <p class="org">PlayyON</p>
                         <p>Guiding growth and innovation for sports and recreation management platform.</p>
+                    </div>
+                    <div class="role-card">
+                        <h3>Strategic Advisor</h3>
+                        <p class="org">WanderSafe</p>
+                        <p>Helping people explore the world safely.</p>
                     </div>
                     <div class="role-card">
                         <h3>Mentor</h3>
