--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                             <ul>
                                 <li>The Future of Private AI</li>
                                 <li>The Future Personal Data Ownership</li>
-                                <li>Preserving Human Identityp</li>
+                                <li>Preserving Human Identity</li>
                                 <li>What is AI and Why Should I Care?</li>
                                 <li>Women in Technology and STEM</li>
                                 <li>The Evolution of Wireless Technology</li>
